# roa-discord-rpc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  details.yaml  version
include/: callback.h  instance.h  mod.h  room.h  stage_room_name.h  steamworks_lobby_hook.h  utils.h  yoyo.h
res/stage-icons/: resize.bat
src/: dllmain.cpp  room.cpp  steamworks_lobby_hook.cpp
